# FireMountain

./: .gitignore  .gitmodules  CMakeLists.txt  FireMountain.code-workspace  README.md  clean.sh
.zed/: debug.json  tasks.json
assets/: evil_froge.glb  good_froge.glb
firemountain/: CMakeLists.txt
firemountain/include/: camera.hpp  firemountain.hpp  fm_mesh_loader.hpp  fm_renderable.hpp  fm_scene.hpp  fm_utils.hpp  vk_buffer.hpp  vk_descriptors.hpp  vk_image.hpp  vk_images.hpp  vk_init.hpp  vk_mesh.hpp  vk_pipeline.hpp  vk_pipeline_builder.hpp  vk_renderer.hpp  vk_swapchain.hpp  vk_texture_cache.hpp  vk_types.hpp
firemountain/src/: camera.cpp  firemountain.cpp  fm_mesh_loader.cpp  fm_scene.cpp  vk_buffer.cpp  vk_descriptors.cpp  vk_image.cpp  vk_images.cpp  vk_init.cpp  vk_mesh.cpp  vk_pipeline.cpp  vk_pipeline_builder.cpp  vk_renderer.cpp  vk_swapchain.cpp  vk_texture_cache.cpp
gamedata/: gamedata.db  init_db.sh  init_db.sql
platform/: CMakeLists.txt
platform/include/: camera.hpp  database.hpp  display.hpp  fp_camera.hpp  game_scene.hpp  mesh.hpp  python_embed.h
platform/src/: camera.cpp  display.cpp  game_scene.cpp  main.cpp  mesh.cpp  python_embed.cpp
platform/src/scenes/: basic_sponza_scene.hpp  scene_wrapper.hpp  spooky_sponza_scene.hpp
shaders/: CMakeLists.txt  bg_gradient.comp  colored_triangle.vert  input_structures.glsl  mesh.frag  mesh.vert  shaderbuilder.py  triangle.frag.spv  triangle.vert  triangle.vert.spv
shaders/src/: basic.slang  bg_gradient.comp  bg_gradient.slang  colored_triangle.frag  input_structures.glsl  light.glsl  mesh.frag  mesh.slang  mesh.vert  textured.frag  triangle.frag  triangle.vert
